updated aboutUs.html, started contact.html

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -24,14 +24,46 @@
                 <nav class = "d-flex justify-content-around">
                     <a href="index.html">Home</a>
                     <a href="aboutUs.html">About Us</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </nav>
             </div>
         </header>
 
-        <section class="d-flex">
+        <section class="mission">
             <h1>Our Mission</h1>
+            <p id="statement">To help you get as Diesel as can be, we created a system to make it easier to keep track of how many reps you can do for time, or how much weight you push out. This app will keep it all organized and tracked for you.</p>
         </section>
+
+        <section id="team">
+            <h1>Meet the Team</h1>
+        </section>
+
+        <div class = "card-deck">
+            <div class="card" style="width: 18rem;">
+                <img src="images/CJP02190 (1).JPG" class="card-img-top" alt="Kadeem">
+                <div class="card-body">
+                <h5 class="card-title">Kadeem Beckford UI Developer</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="images/Leon.PNG" class="card-img-top" alt="Leon">
+                <div class="card-body">
+                <h5 class="card-title">Leon Chisum UI Developer</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="images/Andrew.jpg" class="card-img-top" alt="Andrew">
+                <div class="card-body">
+                <h5 class="card-title">Andrew Johnson React Developer</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+          </div>
+
     </div>  
 </body>
 </html>
