--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav class = "d-flex justify-content-around">
                     <a href="index.html">Home</a>
                     <a href="aboutUs.html">About Us</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </nav>
             </div>
 
@@ -44,7 +44,10 @@
             </form>
         </section>
     
-        <a class="forgot" href="#">Forgot Username?</a>
+        <section class="troubleShoot">
+            <a class="forgot" href="#">Forgot Username?</a>
+        </section>
+    
     <footer class="text-center">
             <ul class="copyright">
                 <p>
