--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
 
         </header>
 
-        <section id="form">
+        <section id="header">
             <h2>Send an Email</h2>
         </section>
-        <section>      
+        <section id ="form">      
             <form class="col-md-8">
                 <div class="row">
                     <div class="col">
@@ -50,3 +50,4 @@
                 </div>
             </form>
         </section> 
+    </div>
