--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="js/index.js" async></script>
 </head>
 <body>
-    <div class = "container">
+    <div class = "container" id="landing-page">
         
         <header class = "row d-flex justify-content-between">
             <div class = "col-md-2">
