--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>Diesel!</title>
 
@@ -28,26 +29,38 @@
                     <a href="contact.html">Contact</a>
                 </nav>
             </div>
-
         </header>
 
         <section id="header">
-            <h2>Send an Email</h2>
+            <h2><span>WEIGHT!</span> want to learn more?</h2>
         </section>
-        <section id ="form">      
+        <section class = "contact">      
             <form class="col-md-8">
+            
                 <div class="row">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="First name">
+                        <input type="text" class="form-control" placeholder="First name" required>
                     </div>
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Email">
+                        <input type="text" class="form-control" placeholder="Email" required>
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Example textarea</label>
+                        <label for="exampleFormControlTextarea1">Message:</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <button type="button" class="btn btn-warning">Submit!</button>
                     </div>
                 </div>
+             
             </form>
-        </section> 
+            <div class = "right-contact">
+                <h3>Office:</h3>
+                <p>Lambda School</p>
+                <p>Silicon, Valley CA 94027</p>
+                <div class="icons">
+                    <i class="material-icons">&#xe52e;</i>
+                    <i class="material-icons">&#xe551;</i>
+                </div>
+            </div>
+        </section>
     </div>
+</body>
