HTML complete, added responsiveness

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <input class= "btn btn-outline-warning" id="button" type = "submit" value = "Sign Up">
                 <input class= "btn btn-outline-warning" id="button" type = "submit" value = "Log in">
             </form>
+            <p id="timer"></p>
         </section>
     
         <section class="troubleShoot">
@@ -53,7 +54,7 @@
     <footer class="text-center">
         <ul class="copyright">
             <p>
-                &copy;Copyright
+                &copy;Copyright   Designed by <a href= "#">Kadeem Beckford</a> & <a href="#">Leon Chisum.</a>
             </p>
         </ul>
     </footer>
