added contact.js file

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -52,8 +52,8 @@
                 <img src="images/Leon.PNG" class="card-img-top" alt="Leon">
                 <div class="card-body">
                 <h5 class="card-title">Leon Chisum UI Developer</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">Name is Leon, Web Developer in training.</p>
+                <a href="#" class="btn btn-primary">Go!</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -61,7 +61,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Andrew Johnson React Developer</h5>
                 <p class="card-text">Hello, I'm Andrew! I enjoy working with computers and people. I believe in helping poeple and enjoying life is possible for everyone and is what I strive to promote. Living a healthy lifestyle is super important to me, so I look for any opportunity to use my work to benefit that goal"</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Go!</a>
                 </div>
           </div>
 
