--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
     <title>Diesel!</title>
 
-    <script src="js/index.js" async></script>
+    <script src="js/contact.js" async></script>
 </head>
 <body>
     <div class = "container">
