--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
         
         <section class="d-flex justify-content-center">
-            <form id = "Sign Up" method = "Post" action = "#">
+            <form id = "Sign Up" method = "Post" action ="https://weightligting-jrnl.herokuapp.com/">
                 <input type = "name" name = "email" id = "email" placeholder = "email address">
                 <input class= "btn btn-outline-warning" id="button" type = "submit" value = "Sign Up">
                 <input class= "btn btn-outline-warning" id="button" type = "submit" value = "Log in">
